--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -140,7 +140,7 @@
                                 <span class="price">$ {{ producto.precio }}</span>
                             </div> <!-- price-wrap.// -->
                         </div>
-                        <a href="#" class="btn btn-block btn-success"> Agregar al Carrito </a>
+                        <a href="{% url 'add_cart' producto.id %}" class="btn btn-block btn-success"> Agregar al Carrito </a>
                     </figcaption>
                 </figure>
             </div> <!-- col.// -->
@@ -150,13 +150,31 @@
     
     
     <nav class="mt-4" aria-label="Page navigation sample">
-      <ul class="pagination">
-        <li class="page-item disabled"><a class="page-link" href="#">Anterior</a></li>
-        <li class="page-item active"><a class="page-link" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <li class="page-item"><a class="page-link" href="#">Siguiente</a></li>
-      </ul>
+      {% if productos.has_other_pages %}
+        <ul class="pagination">
+
+            {% if productos.has_previous %}
+            <li class="page-item"><a class="page-link" href="?page={{ productos.previous_page_number }}">Anterior</a></li>
+            {% else %}
+            <li class="page-item disabled"><a class="page-link" href="#">Anterior</a></li>
+            {% endif %}
+
+            {% for i in productos.paginator.page_range %}
+                {% if productos.number == i %}
+                    <li class="page-item active"><a class="page-link" href="#">{{i}}</a></li>
+                {% else %}
+                    <li class="page-item"><a class="page-link" href="?page={{i}}">{{i}}</a></li>
+                {% endif %}
+            {% endfor %}
+
+            {% if productos.has_next %}
+                <li class="page-item"><a class="page-link" href="?page={{ productos.next_page_number }}">Siguiente</a></li>
+            {% else %}
+                <li class="page-item disabled"><a class="page-link" href="#">Siguiente</a></li>
+            {% endif %}
+        </ul>
+      {% endif %}
+
     </nav>
     
         </main> <!-- col.// -->
